--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abilmente:News</title>
-    <link rel="icon" href="IMG/tab_logo.ico">
+    <link rel="icon" href="./IMG/tabLogo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -17,7 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@500;700&family=Noto+Serif&family=Poppins:wght@500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/Styles.css">
 </head>
 
 <body>
@@ -161,7 +161,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle hover_svg_stroke" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img class="" src="img/close-up-portrait-pretty-smiling-girl_171337-11418 1.png" alt="">
+                            <img class="" src="./IMG/avatar.png" alt="">
                             Annachiara
                             <svg hover_svg_stroke width="12" height="7" viewBox="0 0 12 7" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -222,8 +222,8 @@
                 <div class="bg-white mb-2 mb-md-0 mb-lg-2 me-0 me-md-2 me-lg-0">
                     <div class="p-1 d-flex">
                         <div class="w-50 hover_zoomIn img_swap_hover overflow-hidden"
-                            style="background-image: url(IMG/Rabbits.png);background-repeat: no-repeat; background-size: cover; background-position: left;">
-                            <img src="img/Butterfly.png" alt="" class="w-100 h-100">
+                            style="background-image: url(./IMG/Rabbits.png);background-repeat: no-repeat; background-size: cover; background-position: left;">
+                            <img src="./IMG/Butterfly.png" alt="" class="w-100 h-100">
                         </div>
                         <div class="w-50 p-1 p-xl-3 d-flex flex-column justify-content-between">
                             <h3 class="p_poppins_500 orange_font pb-3">Lorem ipsum</h3>
@@ -240,8 +240,8 @@
                 <div class="bg-white mt-lg-2">
                     <div class="p-1 d-flex">
                         <div class="w-50 hover_zoomIn img_swap_hover overflow-hidden"
-                            style="background-image: url(IMG/Butterfly.png); background-repeat: no-repeat; background-size: cover; background-position: left;">
-                            <img src="img/Rabbits.png" alt="" class="w-100 h-100">
+                            style="background-image: url(./IMG/Butterfly.png); background-repeat: no-repeat; background-size: cover; background-position: left;">
+                            <img src="./IMG/Rabbits.png" alt="" class="w-100 h-100">
                         </div>
                         <div class="w-50 p-1 p-xl-3 d-flex flex-column justify-content-between">
                             <h3 class="p_poppins_500 orange_font pb-3">Lorem ipsum</h3>
@@ -264,7 +264,7 @@
         <div class="row gap-3 ms-0 me-0 ps-0 pe-0 d-flex justify-content-around">
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_rabbits.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUErabbits.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -275,7 +275,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_two_flowers.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEtwoFlowers.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -286,7 +286,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_var.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEvar.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -297,7 +297,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_pigs.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEpigs.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -314,7 +314,7 @@
         <div class="row gap-3 ms-0 me-0 ps-0 pe-0 d-flex justify-content-around">
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_towel.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEtowel.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -325,7 +325,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_tulips.png" alt="" class="w-100">
+                    <img src="/IMG/CATALOGUEtulips.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -336,7 +336,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_small_flowers.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEsmallFlowers.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -347,7 +347,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_paper_thing.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEpaperThing.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -364,7 +364,7 @@
         <div class="row gap-3 ms-0 me-0 ps-0 pe-0 d-flex justify-content-around">
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_rabbits.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUErabbits.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -375,7 +375,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_two_flowers.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEtwoFlowers.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -386,7 +386,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_var.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEvar.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -397,7 +397,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_pigs.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEpigs.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -414,7 +414,7 @@
         <div class="row gap-3 ms-0 me-0 ps-0 pe-0 d-flex justify-content-around">
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_towel.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEtowel.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -425,7 +425,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_tulips.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEtulips.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -436,7 +436,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_small_flowers.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEsmallFlowers.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -447,7 +447,7 @@
             </div>
             <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                 <div class="hover_zoomIn">
-                    <img src="img/CATALOGUE_paper_thing.png" alt="" class="w-100">
+                    <img src="./IMG/CATALOGUEpaperThing.png" alt="" class="w-100">
                 </div>
                 <div class="p-3 p_poppins_500">
                     <p class="grey_font p_13px">1 giugno 2022</p>
@@ -656,9 +656,9 @@
                 </svg>
             </div>
             <div class="col-auto pt-5 pt-lg-0">
-                <img src="img/Siso.png" alt="" class="py-auto ps-2">
-                <img src="img/UFI.png" alt="" class="py-auto ps-2">
-                <img src="img/GBAC.png" alt="" class="py-auto ps-2">
+                <img src="./IMG/Siso.png" alt="" class="py-auto ps-2">
+                <img src="./IMG/UFI.png" alt="" class="py-auto ps-2">
+                <img src="./IMG/GBAC.png" alt="" class="py-auto ps-2">
             </div>
         </div>
         <div class="copyright_field main_body_container">
