--- a/articolo.html
+++ b/articolo.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abilmente:Articolo</title>
-    <link rel="icon" href="IMG/tab_logo.ico">
+    <link rel="icon" href="./IMG/tabLogo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -17,7 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@500;700&family=Noto+Serif&family=Poppins:wght@500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/Styles.css">
 </head>
 
 <body>
@@ -161,7 +161,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle hover_svg_stroke" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img class="" src="img/close-up-portrait-pretty-smiling-girl_171337-11418 1.png" alt="">
+                            <img class="" src="./IMG/avatar.png" alt="">
                             Annachiara
                             <svg hover_svg_stroke width="12" height="7" viewBox="0 0 12 7" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -199,11 +199,11 @@
                 <a href="articolo.html">Articolo</a>
             </div>
             <div>
-                <img src="img/ARTICOLO_main_pic.png" alt="" class="w-100">
+                <img src="./IMG/ARTICOLOmainPic.png" alt="" class="w-100">
             </div>
             <div class="row">
                 <div class="col-2 d-flex flex-column">
-                    <div class="pt-5 mt-4"><img src="img/close-up-portrait-pretty-smiling-girl_171337-11418 1.png"
+                    <div class="pt-5 mt-4"><img src="./IMG/avatar.png"
                             alt="">
                     </div>
                     <p class="p_poppins_500 p_13px pt-2 pb-1 mb-0">News</p>
@@ -247,7 +247,7 @@
                             necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae.
                             Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores
                             alias consequatur aut perferendis doloribus asperiores repellat.</p>
-                        <img src="img/ARTICOLO_pic.png" alt="" class="w-100">
+                        <img src="./IMG/ARTICOLOpic.png" alt="" class="w-100">
                         <p class="pt-3 pb-3 p_notoSerif_400 p_10px">Dida: Sed ut perspiciatis unde omnis iste natus
                             error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae
                             ab illo inventore veritatis et quasi architecto</p>
@@ -279,7 +279,7 @@
                         <hr>
                     </div>
                     <div class="d-flex flex-column flex-lg-row pb-3">
-                        <div class="w-100 w-lg-50 hover_zoomIn pe-3 align-self-lg-center"><img src="img/ALTRI_purple_flower.png" alt="" style="border-radius: 2px 0 0 2px;" class="w-100"></div>
+                        <div class="w-100 w-lg-50 hover_zoomIn pe-3 align-self-lg-center"><img src="./IMG/ALTRIpurpleFlower.png" alt="" style="border-radius: 2px 0 0 2px;" class="w-100"></div>
                         <div class="w-100 w-lg-50 mt-auto mb-auto">
                             <p class="p_poppins_600 p_9px orange_font pb-3">Lorem ipsum</p>
                             <p class="p_poppins_500 p_13px pb-3">Lorem ipsum dolor sit amet</p>
@@ -288,7 +288,7 @@
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-lg-row pb-3">
-                        <div class="w-100 w-lg-50 hover_zoomIn pe-3 align-self-lg-center"><img src="img/ALTRI_woman_painting.png" alt="" style="border-radius: 2px 0 0 2px;" class="w-100"></div>
+                        <div class="w-100 w-lg-50 hover_zoomIn pe-3 align-self-lg-center"><img src="./IMG/ALTRIwomanPainting.png" alt="" style="border-radius: 2px 0 0 2px;" class="w-100"></div>
                         <div class="w-100 w-lg-50 mt-auto mb-auto">
                             <p class="p_poppins_600 p_9px orange_font pb-3">Lorem ipsum</p>
                             <p class="p_poppins_500 p_13px pb-3">Lorem ipsum dolor sit amet</p>
@@ -297,7 +297,7 @@
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-lg-row pb-3">
-                        <div class="w-100 w-lg-50 hover_zoomIn pe-3 align-self-lg-center"><img src="img/ALTRI_butterfly.png" alt=""style="border-radius: 2px 0 0 2px;" class="w-100"></div>
+                        <div class="w-100 w-lg-50 hover_zoomIn pe-3 align-self-lg-center"><img src="./IMG/ALTRIbutterfly.png" alt=""style="border-radius: 2px 0 0 2px;" class="w-100"></div>
                         <div class="w-100 w-lg-50 mt-auto mb-auto">
                             <p class="p_poppins_600 p_9px orange_font pb-3">Lorem ipsum</p>
                             <p class="p_poppins_500 p_13px pb-3">Lorem ipsum dolor sit amet</p>
@@ -316,7 +316,7 @@
             <div class="row gap-3 ms-0 me-0 ps-0 pe-0 d-flex justify-content-around">
                 <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                     <div class="hover_zoomIn">
-                        <img src="img/CATALOGUE_towel.png" alt="" class="w-100">
+                        <img src="./IMG/CATALOGUEtowel.png" alt="" class="w-100">
                     </div>
                     <div class="p-3 p_poppins_500">
                         <p class="grey_font p_13px">1 giugno 2022</p>
@@ -327,7 +327,7 @@
                 </div>
                 <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                     <div class="hover_zoomIn">
-                        <img src="img/CATALOGUE_tulips.png" alt="" class="w-100">
+                        <img src="./IMG/CATALOGUEtulips.png" alt="" class="w-100">
                     </div>
                     <div class="p-3 p_poppins_500">
                         <p class="grey_font p_13px">1 giugno 2022</p>
@@ -338,7 +338,7 @@
                 </div>
                 <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                     <div class="hover_zoomIn">
-                        <img src="img/CATALOGUE_small_flowers.png" alt="" class="w-100">
+                        <img src="./IMG/CATALOGUEsmallFlowers.png" alt="" class="w-100">
                     </div>
                     <div class="p-3 p_poppins_500">
                         <p class="grey_font p_13px">1 giugno 2022</p>
@@ -349,7 +349,7 @@
                 </div>
                 <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                     <div class="hover_zoomIn">
-                        <img src="img/CATALOGUE_tulips_in_vase.png" alt="" class="w-100">
+                        <img src="./IMG/CATALOGUEtulipsInVase.png" alt="" class="w-100">
                     </div>
                     <div class="p-3 p_poppins_500">
                         <p class="grey_font p_13px">1 giugno 2022</p>
@@ -559,9 +559,9 @@
                 </svg>
             </div>
             <div class="col-auto pt-5 pt-lg-0">
-                <img src="img/Siso.png" alt="" class="py-auto ps-2">
-                <img src="img/UFI.png" alt="" class="py-auto ps-2">
-                <img src="img/GBAC.png" alt="" class="py-auto ps-2">
+                <img src="./IMG/Siso.png" alt="" class="py-auto ps-2">
+                <img src="./IMG/UFI.png" alt="" class="py-auto ps-2">
+                <img src="./IMG/GBAC.png" alt="" class="py-auto ps-2">
             </div>
         </div>
         <div class="copyright_field main_body_container">
