--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abilmente:Home page</title>
-    <link rel="icon" href="IMG/tab_logo.ico">
+    <link rel="icon" href="./IMG/tabLogo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -17,7 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@500;700&family=Noto+Serif&family=Poppins:wght@500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/Styles.css">
 </head>
 
 <body>
@@ -161,7 +161,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle hover_svg_stroke" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img class="" src="img/close-up-portrait-pretty-smiling-girl_171337-11418 1.png" alt="">
+                            <img class="" src="./IMG/avatar.png" alt="">
                             Annachiara
                             <svg hover_svg_stroke width="12" height="7" viewBox="0 0 12 7" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -192,7 +192,8 @@
                 </div>
                 <div class="d-flex-column image_block col-3 col-lg-4">
                     <div class="d-lg-flex d-flex-column flex bg-white mt-5 mb-4 rounded animation_opacity">
-                        <div class="p-1 hover_zoomIn text-center"><img src="IMG/Rectangle 203.png" alt="" class="w-100">
+                        <div class="p-1 hover_zoomIn text-center"><img src="./IMG/Rectangle203.png" alt=""
+                                class="w-100">
                         </div>
                         <div class="p-1 p-xl-3 d-flex flex-column justify-content-around">
                             <h3 class="p_poppins_600 orange_font">Lorem ipsum</h3>
@@ -200,7 +201,7 @@
                         </div>
                     </div>
                     <div class="d-lg-flex d-flex-column flex bg-white mt-5 mb-4 rounded animation_opacity">
-                        <div class="p-1 hover_zoomIn"><img src="IMG/Rectangle 203_center.png" alt="" class="w-100">
+                        <div class="p-1 hover_zoomIn"><img src="./IMG/Rectangle203center.png" alt="" class="w-100">
                         </div>
                         <div class="p-1 p-xl-3 d-flex flex-column justify-content-around">
                             <h3 class="p_poppins_600 orange_font">Lorem ipsum</h3>
@@ -208,7 +209,7 @@
                         </div>
                     </div>
                     <div class="d-lg-flex d-flex-column flex bg-white mt-5 mb-4 rounded animation_opacity">
-                        <div class="p-1 hover_zoomIn"><img src="IMG/Rectangle 203_bottom.png" alt="" class="w-100">
+                        <div class="p-1 hover_zoomIn"><img src="./IMG/Rectangle203bottom.png" alt="" class="w-100">
                         </div>
                         <div class="p-1 p-xl-3 d-flex flex-column justify-content-around">
                             <h3 class="p_poppins_600 orange_font">Lorem ipsum</h3>
@@ -219,8 +220,7 @@
             </div>
         </div>
         <div class="bg_secondary main_body_container pb-5">
-            <div
-                class="d-flex justify-content-between align-items-baseline pt-5 hover_link">
+            <div class="d-flex justify-content-between align-items-baseline pt-5 hover_link">
                 <h1 class="p_abhayaLibre_700">News</h1>
                 <a href="news.html" class="p_poppins_700 p_13px p-1">Vedi tutte</a>
             </div>
@@ -246,8 +246,8 @@
                     <div class="bg-white mb-2 mb-md-0 mb-lg-2 me-0 me-md-2 me-lg-0">
                         <div class="p-1 d-flex">
                             <div class="w-50 hover_zoomIn img_swap_hover overflow-hidden"
-                                style="background-image: url(IMG/Rabbits.png);background-repeat: no-repeat; background-size: cover; background-position: left;">
-                                <img src="img/Butterfly.png" alt="" class="w-100 h-100">
+                                style="background-image: url(./IMG/Rabbits.png);background-repeat: no-repeat; background-size: cover; background-position: left;">
+                                <img src="./IMG/Butterfly.png" alt="" class="w-100 h-100">
                             </div>
                             <div class="w-50 p-1 p-xl-3 d-flex flex-column justify-content-between">
                                 <h3 class="p_poppins_500 orange_font pb-3">Lorem ipsum</h3>
@@ -264,8 +264,8 @@
                     <div class="bg-white mt-lg-2">
                         <div class="p-1 d-flex">
                             <div class="w-50 hover_zoomIn img_swap_hover overflow-hidden"
-                                style="background-image: url(IMG/Butterfly.png); background-repeat: no-repeat; background-size: cover; background-position: left;">
-                                <img src="img/Rabbits.png" alt="" class="w-100 h-100">
+                                style="background-image: url(./IMG/Butterfly.png); background-repeat: no-repeat; background-size: cover; background-position: left;">
+                                <img src="./IMG/Rabbits.png" alt="" class="w-100 h-100">
                             </div>
                             <div class="w-50 p-1 p-xl-3 d-flex flex-column justify-content-between">
                                 <h3 class="p_poppins_500 orange_font pb-3">Lorem ipsum</h3>
@@ -287,7 +287,7 @@
                 <div class="mb-2">
                     <h3 class="p_poppins_500 p_24px">Mondi</h3>
                 </div>
-            <hr class="pt-3 mt-0">
+                <hr class="pt-3 mt-0">
                 <div class="container-fluid m-0 p-0 row text-center justify-content-xl-between justify-content-center">
                     <div
                         class="col-10 col-md-5 col-lg-3 col-xl-2 pt-5 pb-5 d-flex ps-xl-0 pe-xl-0 justify-content-center">
@@ -420,8 +420,7 @@
             </div>
         </div>
         <div class="bg_secondary main_body_container">
-            <div
-                class="d-flex justify-content-between align-items-baseline pt-5 hover_link">
+            <div class="d-flex justify-content-between align-items-baseline pt-5 hover_link">
                 <h3 class="p_abhayaLibre_700 p_60px">Tutorial</h3>
                 <a href="news.html" class="p_poppins_700 p_13px p-1">Vedi tutte</a>
             </div>
@@ -429,7 +428,7 @@
             <div class="row gap-3 pb-5 ms-0 me-0 ps-0 pe-0 d-flex justify-content-center">
                 <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                     <div class="hover_zoomIn">
-                        <img src="img/TUTORIAL_young-woman-painting.png" alt="" class="w-100">
+                        <img src="./IMG/TUTORIALyoungWomanPainting.png" alt="" class="w-100">
                     </div>
                     <div class="p-3">
                         <div class="d-flex p_poppins_500 p_13px justify-content-between">
@@ -442,7 +441,7 @@
                 </div>
                 <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                     <div class="hover_zoomIn">
-                        <img src="img/TUTORIAL_flowers.png" alt="" class="w-100">
+                        <img src="./IMG/TUTORIALflowers.png" alt="" class="w-100">
                     </div>
                     <div class="p-3">
                         <div class="d-flex p_poppins_500 p_13px justify-content-between">
@@ -455,7 +454,7 @@
                 </div>
                 <div class="col-12 col-md-5 col-lg p-1 d-flex flex-column bg-white rounded">
                     <div class="hover_zoomIn">
-                        <img src="img/TUTORIAL_pigs.png" alt="" class="w-100">
+                        <img src="./IMG/TUTORIALpigs.png" alt="" class="w-100">
                     </div>
                     <div class="p-3">
                         <div class="d-flex p_poppins_500 p_13px justify-content-between">
@@ -472,7 +471,8 @@
             <div class="bg_secondary pt-5 pb-5">
                 <div class="ms-5 me-5">
                     <div class="mb-2 ms-5 me-5">
-                        <h3 class="p_poppins_500 p_24px">Sponsor</h3><hr class="pt-3 mt-2">
+                        <h3 class="p_poppins_500 p_24px">Sponsor</h3>
+                        <hr class="pt-3 mt-2">
                     </div>
                 </div>
                 <div class="row d-flex ms-5 me-5">
@@ -767,8 +767,8 @@
                                 </div>
                                 <div>
                                     <div class="form-check hover_shadow d-flex">
-                                        <input class="form-check-input align-self-center" type="radio" name="flexRadioDefault_group2"
-                                            id="flexRadioDefault4">
+                                        <input class="form-check-input align-self-center" type="radio"
+                                            name="flexRadioDefault_group2" id="flexRadioDefault4">
                                         <label class="form-check-label p_poppins_400 p_9px align-self-center ps-2"
                                             for="flexRadioDefault4">
                                             Non Acconsento
@@ -782,7 +782,8 @@
                 </div>
             </div>
         </div>
-        <div class="bg-white main_body_container row pt-5 pb-5 d-flex justify-content-center justify-content-lg-between align-items-center">
+        <div
+            class="bg-white main_body_container row pt-5 pb-5 d-flex justify-content-center justify-content-lg-between align-items-center">
             <div class="col-12 col-lg-3 text-center text-lg-start">
                 <svg width="214" height="117" viewBox="0 0 214 117" fill="none" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -798,9 +799,9 @@
                 </svg>
             </div>
             <div class="col-auto pt-5 pt-lg-0">
-                <img src="img/Siso.png" alt="" class="py-auto ps-2">
-                <img src="img/UFI.png" alt="" class="py-auto ps-2">
-                <img src="img/GBAC.png" alt="" class="py-auto ps-2">
+                <img src="./IMG/Siso.png" alt="" class="py-auto ps-2">
+                <img src="./IMG/UFI.png" alt="" class="py-auto ps-2">
+                <img src="./IMG/GBAC.png" alt="" class="py-auto ps-2">
 
             </div>
         </div>
