--- a/articolo.html
+++ b/articolo.html
@@ -202,14 +202,14 @@
                 <img src="./img/altricoloMainPic.png" alt="" class="w-100">
             </div>
             <div class="row">
-                <div class="col-12 col-md-2 d-flex flex-column">
+                <div class="col-12 col-sm-2 d-flex flex-column">
                     <div class="pt-0 pt-md-5 mt-0 mt-md-4"><img src="./img/avatar.png"
                             alt="">
                     </div>
                     <p class="p_poppins_500 p_13px pt-2 pb-1 mb-0">News</p>
                     <p class="p_poppins_500 p_13px pt-0 mt-0">by <span class="orange_font">Angelica Foschi</span></p>
                 </div>
-                <div class="col-12 col-md-7 col-lg-6">
+                <div class="col-12 col-sm-7 col-lg-6">
                     <div class="p_poppins_400 p_13px pt-4 d-flex justify-content-between">
                         <div>
                             <p class="orange_font hover_link">
@@ -273,7 +273,7 @@
                             alias consequatur aut perferendis doloribus asperiores repellat.</p>
                     </div>
                 </div>
-                <div class="col-12 col-md d-flex flex-column">
+                <div class="col-12 col-sm d-flex flex-column">
                     <div class="pt-5 mb-4 hover_link">
                         <p class="p_poppins_500 p_13px text-uppercase">altri articoli di angelica</p>
                         <hr>
